# RaptRanker

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  RaptRanker.cpp  RaptRanker.hpp  Stopwatch.hpp  main.cpp
test/: TestData-0R.fastq  TestData-1R.fastq  TestData-2R.fastq  parameterTestData.json
test/sample_result/: inputSS_AllRound.txt  outputSS_AllRound.txt  result.sqlite3  score.csv  seqinfo.sqlite3
test/your_result/: dammy.txt  dummy.txt
